tests/snapshots/sizes__tap_callers_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                  │
│  FROM users                                                                                                          │
│  WHERE plan = 'pro'                                                                                                  │
│  OR┌ JDBC tap — 8 queries · 0 heartbeats · view: callers · sort: total time · v cycle · Shift-B baseline · … ───┐    │
└────│   calls    err        p50        p95   fps  caller · last fingerprint                                      │────┘
┌ res│       6      0      450µs      495µs     1  OrderService.loadItems:88 · select * from order_items wher…    │────┐
│id  │       1      0      1.8ms      1.8ms     1  OrderService.listOpen:54 · select id, user_id, status fro…     │    │
│1   │       1      0      310µs      310µs     1  UserController.show:31 · select id, email, plan from us…       │    │
│2   │                                                                                                            │    │
│3   │                                                                                                            │    │
│4   │                                                                                                            │    │
│5   │                                                                                                            │    │
│6   │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
