tests/snapshots/sizes__tap_callers_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│>┌ JDBC tap — 8 queries · 0 heartbeats · … ────────────┐  │
│ │   calls    err        p50        p95   fps  caller ·│  │
│ │       6      0      450µs      495µs     1  Ord… · s│  │
│ │       1      0      1.8ms      1.8ms     1  Ord… · s│  │
└─│       1      0      310µs      310µs     1  Use… · s│──┘
┌ │                                                     │──┐
│i│                                                     │  │
│1│                                                     │  │
│2│                                                     │  │
│3│                                                     │  │
│4└─────────────────────────────────────────────────────┘  │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · F1 +5 more
