tests/snapshots/sizes__tap_hotspots_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                        ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  W┌ JDBC tap — 8 queries · 0 heartbeats · view: hotspots · sort: total time · v cycle · … ───┐   │
│  O│   calls    err        p50        p95        p99  fingerprint · last caller               │   │
│   │       6      0      450µs      495µs      495µs  select * from order… · OrderService.load│   │
└───│       1      0      1.8ms      1.8ms      1.8ms  select id, user_id,… · OrderService.list│───┘
┌ re│       1      0      310µs      310µs      310µs  select id, email, p… · UserController.sh│───┐
│id │                                                                                          │   │
│1  │                                                                                          │   │
│2  │                                                                                          │   │
│3  │                                                                                          │   │
│4  │                                                                                          │   │
│5  │                                                                                          │   │
│6  │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   └──────────────────────────────────────────────────────────────────────────────────────────┘   │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
