tests/snapshots/sizes__tap_hotspots_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> ┌ JDBC tap — 8 query · 0 heartbeat · view: hotspots · sort: total time ·┐   │
│  │   calls    err        p50        p95        p99  fingerprint · last ca│   │
│  │       6      0      450µs      495µs      495µs  select * … · OrderSer│   │
│  │       1      0      1.8ms      1.8ms      1.8ms  select id… · OrderSer│   │
└──│       1      0      310µs      310µs      310µs  select id… · UserCont│───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · F1 +4 more
